--- a/roles/ansible_lint/tasks/main.yml
+++ b/roles/ansible_lint/tasks/main.yml
@@ -1,13 +1,13 @@
-- import_tasks: '{{ helpers }}/package_pip.yml'
+- import_tasks: "{{ helpers }}/package_pip.yml"
   vars:
     package_pip_facts:
       install:
-        - 'ansible-lint'
+        - "ansible-lint"
 
-- import_tasks: '{{ helpers }}/copy.yml'
+- import_tasks: "{{ helpers }}/copy.yml"
   vars:
     copy_facts:
-      - src: 'ansible-lint.yml'
-        dest: '{{ playbook_dir }}'
-        filename: '.ansible-lint'
-  tags: 'copy_ansible_lint'
+      - src: "ansible-lint.yml"
+        dest: "{{ playbook_dir }}"
+        filename: ".ansible-lint"
+  tags: "copy_ansible_lint"
