--- a/roles/easytag/tasks/main.yml
+++ b/roles/easytag/tasks/main.yml
@@ -1,10 +1,10 @@
-- import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: "{{ helpers }}/package_apt.yml"
   vars:
     package_apt_facts:
       install:
-        - 'easytag'
+        - "easytag"
 
-- import_tasks: '{{ helpers }}/dconf.yml'
+- import_tasks: "{{ helpers }}/dconf.yml"
   vars:
-    dconf_facts: '{{ easytag_settings }}'
-  tags: 'dconf_easytag'
+    dconf_facts: "{{ easytag_settings }}"
+  tags: "dconf_easytag"
