--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -1,34 +1,34 @@
-- import_tasks: '{{ helpers }}/repo.yml'
+- import_tasks: "{{ helpers }}/repo.yml"
   vars:
     repo_facts:
-      - repo: 'ppa:kelleyk/emacs'
+      - repo: "ppa:kelleyk/emacs"
 
-- import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: "{{ helpers }}/package_apt.yml"
   vars:
     package_apt_facts:
       install:
-        - 'emacs26'
+        - "emacs26"
 
-- import_tasks: '{{ helpers }}/template.yml'
+- import_tasks: "{{ helpers }}/template.yml"
   vars:
     template_facts:
-      - src: 'init.el'
-        dest: '{{ user_home }}/.emacs.d'
-      - src: 'settings.el'
-        dest: '{{ user_home }}/.emacs.d/config'
-      - src: 'use_package.el'
-        dest: '{{ user_home }}/.emacs.d/config'
+      - src: "init.el"
+        dest: "{{ user_home }}/.emacs.d"
+      - src: "settings.el"
+        dest: "{{ user_home }}/.emacs.d/config"
+      - src: "use_package.el"
+        dest: "{{ user_home }}/.emacs.d/config"
   tags:
-    - 'user_font'
-    - 'template_emacs'
+    - "user_font"
+    - "template_emacs"
 
 - name: configure
   block:
     - name: run init file
-      command: 'emacs --script init.el'
+      command: "emacs --script init.el"
       args:
-        chdir: '{{ user_home }}/.emacs.d'
-        removes: 'init.el'
+        chdir: "{{ user_home }}/.emacs.d"
+        removes: "init.el"
       register: command_result
       until: not command_result.failed
       retries: 10
@@ -36,17 +36,17 @@
   rescue:
     - name: cannot run init file
       debug:
-        msg: 'Cannot run init file'
-  tags: 'emacs_configure'
+        msg: "Cannot run init file"
+  tags: "emacs_configure"
 
-- import_tasks: '{{ helpers }}/mime.yml'
+- import_tasks: "{{ helpers }}/mime.yml"
   vars:
     mime_facts:
-      entry_name: 'emacs26'
+      entry_name: "emacs26"
       type:
-        - 'application/org'
-        - 'text/x-emacs-lisp'
-  tags: 'mime'
+        - "application/org"
+        - "text/x-emacs-lisp"
+  tags: "mime"
 
-- import_tasks: 'org.yml'
-  tags: 'emacs_org'
+- import_tasks: "org.yml"
+  tags: "emacs_org"
