--- a/roles/nvm/tasks/main.yml
+++ b/roles/nvm/tasks/main.yml
@@ -1,31 +1,31 @@
 - name: create task variables
   set_fact:
-    nvm_dir: '{{ user_home }}/.nvm'
-  tags: 'nvm'
+    nvm_dir: "{{ user_home }}/.nvm"
+  tags: "nvm"
 
-- import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: "{{ helpers }}/package_apt.yml"
   vars:
     package_apt_facts:
       install:
-        - 'build-essential'
-        - 'libssl-dev'
+        - "build-essential"
+        - "libssl-dev"
 
-- import_tasks: '{{ helpers }}/git_repo.yml'
+- import_tasks: "{{ helpers }}/git_repo.yml"
   vars:
     git_repo_facts:
-      - repo: 'https://github.com/creationix/nvm.git'
-        dest: '{{ nvm_dir }}'
-  tags: 'nvm'
+      - repo: "https://github.com/creationix/nvm.git"
+        dest: "{{ nvm_dir }}"
+  tags: "nvm"
 
-- import_tasks: '{{ helpers }}/alias.yml'
-  tags: 'alias_nvm'
+- import_tasks: "{{ helpers }}/alias.yml"
+  tags: "alias_nvm"
 
 - name: install lts version of node
   command: '{{ ansible_user_shell }} -c "source ~/.nvm/nvm.sh; {{ item }}"'
   loop:
-    - 'nvm install --lts'
-    - 'nvm alias default node'
-    - 'nvm use --lts'
+    - "nvm install --lts"
+    - "nvm alias default node"
+    - "nvm use --lts"
   args:
-    removes: '{{ nvm_dir }}'
-  tags: 'nvm'
+    removes: "{{ nvm_dir }}"
+  tags: "nvm"
