--- a/helpers/dir_create.yml
+++ b/helpers/dir_create.yml
@@ -1,6 +1,6 @@
 - name: helper | dir_create | create directory
   file:
-    path: '{{ item }}'
+    path: "{{ item }}"
     state: directory
   when: item is not directory
-  loop: '{{ dir_create_facts }}'
+  loop: "{{ dir_create_facts }}"
