--- a/helpers/package_apt.yml
+++ b/helpers/package_apt.yml
@@ -6,23 +6,23 @@
     - name: helper | package_apt | install package
       apt:
         force_apt_get: True
-        install_recommends: '{{ item.install_recommends | default(False) }}'
-        name: '{{ item.install }}'
+        install_recommends: "{{ item.install_recommends | default(False) }}"
+        name: "{{ item.install }}"
         state: latest
       register: apt_install_result
       until: not apt_install_result.failed
       retries: 10
       delay: 10
       when: item.install is defined
-      loop: '{{ package_list }}'
+      loop: "{{ package_list }}"
 
     - name: helper | package_apt | remove package
       apt:
         force_apt_get: True
         purge: True
-        name: '{{ item.remove }}'
+        name: "{{ item.remove }}"
         state: absent
         autoremove: True
       when: item.remove is defined
-      loop: '{{ package_list }}'
+      loop: "{{ package_list }}"
   become: True
