--- a/helpers/package_pip.yml
+++ b/helpers/package_pip.yml
@@ -1,7 +1,7 @@
 - name: helper | package_pip | install package
   pip:
-    name: '{{ item.install }}'
-    extra_args: '--user --upgrade'
+    name: "{{ item.install }}"
+    extra_args: "--user --upgrade"
     state: latest
   register: pip_install_result
   until: not pip_install_result.failed
