--- a/hosts.yml
+++ b/hosts.yml
@@ -2,4 +2,4 @@ local:
   hosts: localhost
   vars:
     ansible_connection: local
-    ansible_python_interpreter: '{{ ansible_playbook_python }}'
+    ansible_python_interpreter: "{{ ansible_playbook_python }}"
