--- a/playbook.yml
+++ b/playbook.yml
@@ -69,7 +69,7 @@
             force_apt_get: True
             autoremove: True
             autoclean: True
-          tags: 'skip_ansible_lint'
+          tags: "skip_ansible_lint"
 
         - name: reboot system
           shell: sleep 3 && reboot
