--- a/roles/albert/tasks/main.yml
+++ b/roles/albert/tasks/main.yml
@@ -1,41 +1,41 @@
-- import_tasks: '{{ helpers }}/key.yml'
+- import_tasks: "{{ helpers }}/key.yml"
   vars:
     key_facts:
-      - 'https://download.opensuse.org/repositories/home:manuelschneid3r/xUbuntu_18.04/Release.key'
+      - "https://download.opensuse.org/repositories/home:manuelschneid3r/xUbuntu_18.04/Release.key"
 
-- import_tasks: '{{ helpers }}/repo.yml'
+- import_tasks: "{{ helpers }}/repo.yml"
   vars:
     repo_facts:
-      - repo: 'deb https://download.opensuse.org/repositories/home:/manuelschneid3r/xUbuntu_18.04/ /'
-        filename: 'home:manuelschneid3r'
+      - repo: "deb https://download.opensuse.org/repositories/home:/manuelschneid3r/xUbuntu_18.04/ /"
+        filename: "home:manuelschneid3r"
 
-- import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: "{{ helpers }}/package_apt.yml"
   vars:
     package_apt_facts:
       install:
-        - 'albert'
+        - "albert"
 
-- import_tasks: '{{ helpers }}/template.yml'
+- import_tasks: "{{ helpers }}/template.yml"
   vars:
     template_facts:
-      - src: 'albert.conf'
-        dest: '{{ user_config }}/albert'
-      - src: '.albertignore'
-        dest: '{{ user_home }}'
+      - src: "albert.conf"
+        dest: "{{ user_config }}/albert"
+      - src: ".albertignore"
+        dest: "{{ user_home }}"
         data:
-          - '/*/*/**'
-          - '{{ user_storage | basename }}'
-      - src: '.albertignore'
-        dest: '{{ user_storage }}'
+          - "/*/*/**"
+          - "{{ user_storage | basename }}"
+      - src: ".albertignore"
+        dest: "{{ user_storage }}"
         data:
-          - '.debris'
-  tags: 'template_albert'
+          - ".debris"
+  tags: "template_albert"
 
-- import_tasks: '{{ helpers }}/launcher.yml'
+- import_tasks: "{{ helpers }}/launcher.yml"
   vars:
     launcher_facts:
-      - exec: 'albert'
-        name: 'albert launcher'
+      - exec: "albert"
+        name: "albert launcher"
         delay: 0
         startup: True
-  tags: 'launcher_albert'
+  tags: "launcher_albert"
