--- a/roles/calibre/defaults/main.yml
+++ b/roles/calibre/defaults/main.yml
@@ -1,1 +1,1 @@
-calibre_installer: 'https://download.calibre-ebook.com/linux-installer.sh'
+calibre_installer: "https://download.calibre-ebook.com/linux-installer.sh"
