--- a/roles/calibre/tasks/main.yml
+++ b/roles/calibre/tasks/main.yml
@@ -1,18 +1,18 @@
-- import_tasks: '{{ helpers }}/template.yml'
+- import_tasks: "{{ helpers }}/template.yml"
   vars:
     template_facts:
-      - src: 'viewer.py'
-        dest: '{{ user_config }}/calibre'
+      - src: "viewer.py"
+        dest: "{{ user_config }}/calibre"
   tags:
-    - 'user_font'
-    - 'template_calibre'
+    - "user_font"
+    - "template_calibre"
 
-- import_tasks: '{{ helpers }}/tempfile.yml'
+- import_tasks: "{{ helpers }}/tempfile.yml"
 
 - name: get the installer
   get_url:
-    url: '{{ calibre_installer }}'
-    dest: '{{ helper_tempfile_result }}'
+    url: "{{ calibre_installer }}"
+    dest: "{{ helper_tempfile_result }}"
   register: get_url_result
   until: get_url_result.msg is match('OK*')
   retries: 10
@@ -20,12 +20,12 @@
 
 - name: install
   become: True
-  script: '{{ helper_tempfile_result }}/{{ calibre_installer | basename }}'
+  script: "{{ helper_tempfile_result }}/{{ calibre_installer | basename }}"
 
-- import_tasks: '{{ helpers }}/mime.yml'
+- import_tasks: "{{ helpers }}/mime.yml"
   vars:
     mime_facts:
-      entry_name: 'calibre-ebook-viewer'
+      entry_name: "calibre-ebook-viewer"
       type:
-        - 'application/epub+zip'
-  tags: 'mime'
+        - "application/epub+zip"
+  tags: "mime"
