--- a/roles/chromium/tasks/main.yml
+++ b/roles/chromium/tasks/main.yml
@@ -1,14 +1,14 @@
-- import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: "{{ helpers }}/package_apt.yml"
   vars:
     package_apt_facts:
       install:
-        - 'chromium-browser'
+        - "chromium-browser"
 
-- import_tasks: '{{ helpers }}/template.yml'
+- import_tasks: "{{ helpers }}/template.yml"
   vars:
     template_facts:
-      - src: 'Preferences'
-        dest: '{{ user_config }}/chromium/Default'
+      - src: "Preferences"
+        dest: "{{ user_config }}/chromium/Default"
   tags:
-    - 'user_font'
-    - 'template_chromium'
+    - "user_font"
+    - "template_chromium"
