--- a/roles/doublecmd/tasks/main.yml
+++ b/roles/doublecmd/tasks/main.yml
@@ -1,16 +1,16 @@
-- import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: "{{ helpers }}/package_apt.yml"
   vars:
     package_apt_facts:
       install:
-        - 'doublecmd-gtk'
+        - "doublecmd-gtk"
 
-- import_tasks: '{{ helpers }}/template.yml'
+- import_tasks: "{{ helpers }}/template.yml"
   vars:
     template_facts:
-      - src: 'doublecmd.xml'
-        dest: '{{ user_config }}/doublecmd'
-      - src: 'shortcuts.scf'
-        dest: '{{ user_config }}/doublecmd'
+      - src: "doublecmd.xml"
+        dest: "{{ user_config }}/doublecmd"
+      - src: "shortcuts.scf"
+        dest: "{{ user_config }}/doublecmd"
   tags:
-    - 'user_font'
-    - 'template_doublecmd'
+    - "user_font"
+    - "template_doublecmd"
