--- a/roles/htop/tasks/main.yml
+++ b/roles/htop/tasks/main.yml
@@ -1,12 +1,12 @@
-- import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: "{{ helpers }}/package_apt.yml"
   vars:
     package_apt_facts:
       install:
-        - 'htop'
+        - "htop"
 
-- import_tasks: '{{ helpers }}/copy.yml'
+- import_tasks: "{{ helpers }}/copy.yml"
   vars:
     copy_facts:
-      - src: 'htoprc'
-        dest: '{{ user_config }}/htop'
-  tags: 'copy_htop'
+      - src: "htoprc"
+        dest: "{{ user_config }}/htop"
+  tags: "copy_htop"
