--- a/roles/keepassxc/tasks/main.yml
+++ b/roles/keepassxc/tasks/main.yml
@@ -1,19 +1,19 @@
-- import_tasks: '{{ helpers }}/repo.yml'
+- import_tasks: "{{ helpers }}/repo.yml"
   vars:
     repo_facts:
-      - repo: 'ppa:phoerious/keepassxc'
+      - repo: "ppa:phoerious/keepassxc"
 
-- import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: "{{ helpers }}/package_apt.yml"
   vars:
     package_apt_facts:
       install:
-        - 'keepassxc'
+        - "keepassxc"
 
-- import_tasks: '{{ helpers }}/template.yml'
+- import_tasks: "{{ helpers }}/template.yml"
   vars:
     template_facts:
-      - src: 'keepassxc.ini'
-        dest: '{{ user_config }}/keepassxc'
+      - src: "keepassxc.ini"
+        dest: "{{ user_config }}/keepassxc"
         data:
-          filename: 'psst.kdbx'
-  tags: 'template_keepassxc'
+          filename: "psst.kdbx"
+  tags: "template_keepassxc"
