--- a/roles/liferea/tasks/main.yml
+++ b/roles/liferea/tasks/main.yml
@@ -1,51 +1,51 @@
-- import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: "{{ helpers }}/package_apt.yml"
   vars:
     package_apt_facts:
       install:
-        - 'liferea'
-        - 'aria2'
-  tags: 'package_apt_liferea'
+        - "liferea"
+        - "aria2"
+  tags: "package_apt_liferea"
 
-- import_tasks: '{{ helpers }}/template.yml'
+- import_tasks: "{{ helpers }}/template.yml"
   vars:
     template_facts:
-      - src: 'mime.xml'
-        dest: '{{ user_config }}/liferea'
-  tags: 'template_liferea'
+      - src: "mime.xml"
+        dest: "{{ user_config }}/liferea"
+  tags: "template_liferea"
 
-- import_tasks: '{{ helpers }}/copy.yml'
+- import_tasks: "{{ helpers }}/copy.yml"
   vars:
     copy_facts:
-      - src: 'feedlist.opml'
-        dest: '{{ user_config }}/liferea'
+      - src: "feedlist.opml"
+        dest: "{{ user_config }}/liferea"
         backup: True
-  tags: 'copy_liferea'
+  tags: "copy_liferea"
 
-- import_tasks: '{{ helpers }}/dconf.yml'
+- import_tasks: "{{ helpers }}/dconf.yml"
   vars:
     dconf_facts:
-      - key: '/org/gnome/liferea/default-update-interval'
-        value: '180'
-      - key: '/org/gnome/liferea/disable-toolbar'
-        value: 'true'
-      - key: '/org/gnome/liferea/enable-plugins'
-        value: 'false'
-      - key: '/org/gnome/liferea/last-hpane-pos'
-        value: '300'
-      - key: '/org/gnome/liferea/last-vpane-pos'
-        value: '280'
-      - key: '/org/gnome/liferea/last-window-height'
-        value: '800'
-      - key: '/org/gnome/liferea/last-window-width'
-        value: '1300'
-      - key: '/org/gnome/liferea/last-window-x'
-        value: '30'
-      - key: '/org/gnome/liferea/last-window-y'
-        value: '30'
-      - key: '/org/gnome/liferea/last-wpane-pos'
-        value: '300'
-      - key: '/org/gnome/liferea/last-zoomlevel'
-        value: '120'
-      - key: '/org/gnome/liferea/plugins/active-plugins'
-        value: '@as []'
-  tags: 'dconf_liferea'
+      - key: "/org/gnome/liferea/default-update-interval"
+        value: "180"
+      - key: "/org/gnome/liferea/disable-toolbar"
+        value: "true"
+      - key: "/org/gnome/liferea/enable-plugins"
+        value: "false"
+      - key: "/org/gnome/liferea/last-hpane-pos"
+        value: "300"
+      - key: "/org/gnome/liferea/last-vpane-pos"
+        value: "280"
+      - key: "/org/gnome/liferea/last-window-height"
+        value: "800"
+      - key: "/org/gnome/liferea/last-window-width"
+        value: "1300"
+      - key: "/org/gnome/liferea/last-window-x"
+        value: "30"
+      - key: "/org/gnome/liferea/last-window-y"
+        value: "30"
+      - key: "/org/gnome/liferea/last-wpane-pos"
+        value: "300"
+      - key: "/org/gnome/liferea/last-zoomlevel"
+        value: "120"
+      - key: "/org/gnome/liferea/plugins/active-plugins"
+        value: "@as []"
+  tags: "dconf_liferea"
