--- a/roles/megasync/tasks/main.yml
+++ b/roles/megasync/tasks/main.yml
@@ -1,26 +1,26 @@
-- import_tasks: '{{ helpers }}/key.yml'
+- import_tasks: "{{ helpers }}/key.yml"
   vars:
     key_facts:
-      - 'https://mega.nz/linux/MEGAsync/xUbuntu_18.04/Release.key'
+      - "https://mega.nz/linux/MEGAsync/xUbuntu_18.04/Release.key"
 
-- import_tasks: '{{ helpers }}/repo.yml'
+- import_tasks: "{{ helpers }}/repo.yml"
   vars:
     repo_facts:
-      - repo: 'deb https://mega.nz/linux/MEGAsync/xUbuntu_18.04/ ./'
-        filename: 'megasync'
+      - repo: "deb https://mega.nz/linux/MEGAsync/xUbuntu_18.04/ ./"
+        filename: "megasync"
 
-- import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: "{{ helpers }}/package_apt.yml"
   vars:
     package_apt_facts:
       install:
-        - 'megasync'
+        - "megasync"
 
-- import_tasks: '{{ helpers }}/launcher.yml'
+- import_tasks: "{{ helpers }}/launcher.yml"
   vars:
     launcher_facts:
-      - exec: 'megasync'
-        name: 'megasync'
+      - exec: "megasync"
+        name: "megasync"
         delay: 50
-        icon: 'mega'
+        icon: "mega"
         startup: True
-  tags: 'launcher_megasync'
+  tags: "launcher_megasync"
