--- a/roles/optimization/defaults/main.yml
+++ b/roles/optimization/defaults/main.yml
@@ -1,7 +1,7 @@
 optimization_autostart_entry_list:
-  - 'cinnamon-settings-daemon-wacom.desktop'
-  - 'mintinstall-update-flatpak.desktop'
-  - 'nvidia-prime.desktop'
-  - 'orca-autostart.desktop'
-  - 'org.gnome.SettingsDaemon.Wacom.desktop'
-  - 'print-applet.desktop'
+  - "cinnamon-settings-daemon-wacom.desktop"
+  - "mintinstall-update-flatpak.desktop"
+  - "nvidia-prime.desktop"
+  - "orca-autostart.desktop"
+  - "org.gnome.SettingsDaemon.Wacom.desktop"
+  - "print-applet.desktop"
