--- a/roles/rsnapshot/tasks/main.yml
+++ b/roles/rsnapshot/tasks/main.yml
@@ -1,27 +1,27 @@
-- import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: "{{ helpers }}/package_apt.yml"
   vars:
     package_apt_facts:
       install:
-        - 'rsnapshot'
+        - "rsnapshot"
 
-- import_tasks: '{{ helpers }}/template.yml'
+- import_tasks: "{{ helpers }}/template.yml"
   vars:
     template_facts:
-      - src: 'rsnapshot.conf'
-        dest: '{{ user_config }}/rsnapshot'
+      - src: "rsnapshot.conf"
+        dest: "{{ user_config }}/rsnapshot"
         data:
-          - '{{ user_storage }}/archive/'
-          - '{{ user_storage }}/audiobook/'
-          - '{{ user_storage }}/book/'
-          - '{{ user_storage }}/dev/'
-          - '{{ user_storage }}/gym/'
-          - '{{ user_storage }}/music/'
-          - '{{ user_storage }}/org/'
-          - '{{ user_storage }}/picture/'
-          - '{{ user_storage }}/privacy/'
-          - '{{ user_storage }}/sync/'
-          - '{{ user_storage }}/video/'
-  tags: 'template_rsnapshot'
+          - "{{ user_storage }}/archive/"
+          - "{{ user_storage }}/audiobook/"
+          - "{{ user_storage }}/book/"
+          - "{{ user_storage }}/dev/"
+          - "{{ user_storage }}/gym/"
+          - "{{ user_storage }}/music/"
+          - "{{ user_storage }}/org/"
+          - "{{ user_storage }}/picture/"
+          - "{{ user_storage }}/privacy/"
+          - "{{ user_storage }}/sync/"
+          - "{{ user_storage }}/video/"
+  tags: "template_rsnapshot"
 
-- import_tasks: '{{ helpers }}/alias.yml'
-  tags: 'alias_rsnapshot'
+- import_tasks: "{{ helpers }}/alias.yml"
+  tags: "alias_rsnapshot"
