--- a/roles/sublime/tasks/main.yml
+++ b/roles/sublime/tasks/main.yml
@@ -1,34 +1,34 @@
-- import_tasks: '{{ helpers }}/key.yml'
+- import_tasks: "{{ helpers }}/key.yml"
   vars:
     key_facts:
-      - 'https://download.sublimetext.com/sublimehq-pub.gpg'
+      - "https://download.sublimetext.com/sublimehq-pub.gpg"
 
-- import_tasks: '{{ helpers }}/repo.yml'
+- import_tasks: "{{ helpers }}/repo.yml"
   vars:
     repo_facts:
-      - repo: 'deb https://download.sublimetext.com/ apt/stable/'
+      - repo: "deb https://download.sublimetext.com/ apt/stable/"
 
-- import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: "{{ helpers }}/package_apt.yml"
   vars:
     package_apt_facts:
       install:
-        - 'sublime-text'
+        - "sublime-text"
 
-- import_tasks: '{{ helpers }}/template.yml'
+- import_tasks: "{{ helpers }}/template.yml"
   vars:
     template_facts:
-      - src: 'Preferences.sublime-settings'
-        dest: '{{ user_config }}/sublime-text-3/Packages/User'
+      - src: "Preferences.sublime-settings"
+        dest: "{{ user_config }}/sublime-text-3/Packages/User"
   tags:
-    - 'user_font'
-    - 'template_sublime'
+    - "user_font"
+    - "template_sublime"
 
-- import_tasks: '{{ helpers }}/mime.yml'
+- import_tasks: "{{ helpers }}/mime.yml"
   vars:
     mime_facts:
-      entry_name: 'sublime_text'
+      entry_name: "sublime_text"
       type:
-        - 'application/x-shellscript'
-        - 'text/plain'
-        - 'text/x-makefile'
-  tags: 'mime'
+        - "application/x-shellscript"
+        - "text/plain"
+        - "text/x-makefile"
+  tags: "mime"
