--- a/roles/thefuck/tasks/main.yml
+++ b/roles/thefuck/tasks/main.yml
@@ -1,8 +1,8 @@
-- import_tasks: '{{ helpers }}/package_pip.yml'
+- import_tasks: "{{ helpers }}/package_pip.yml"
   vars:
     package_pip_facts:
       install:
-        - 'thefuck'
+        - "thefuck"
 
-- import_tasks: '{{ helpers }}/alias.yml'
-  tags: 'alias_thefuck'
+- import_tasks: "{{ helpers }}/alias.yml"
+  tags: "alias_thefuck"
