--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -1,13 +1,13 @@
-- import_tasks: '{{ helpers }}/repo.yml'
+- import_tasks: "{{ helpers }}/repo.yml"
   vars:
     repo_facts:
-      - repo: 'ppa:wireguard/wireguard'
+      - repo: "ppa:wireguard/wireguard"
 
-- import_tasks: '{{ helpers }}/package_apt.yml'
+- import_tasks: "{{ helpers }}/package_apt.yml"
   vars:
     package_apt_facts:
       install:
-        - 'wireguard'
+        - "wireguard"
 
-- import_tasks: '{{ helpers }}/alias.yml'
-  tags: 'alias_wireguard'
+- import_tasks: "{{ helpers }}/alias.yml"
+  tags: "alias_wireguard"
