--- a/vars.yml
+++ b/vars.yml
@@ -1,13 +1,13 @@
-dotfiles_roles: '{{ playbook_dir }}/roles'
-helpers: '{{ playbook_dir }}/helpers'
-sync_directory: '{{ user_storage }}/sync'
+dotfiles_roles: "{{ playbook_dir }}/roles"
+helpers: "{{ playbook_dir }}/helpers"
+sync_directory: "{{ user_storage }}/sync"
 ubuntu_codename: "{{ lookup('ini', 'UBUNTU_CODENAME type=properties file=/etc/os-release') }}"
-user_config: '{{ user_home }}/.config'
-user_default_editor: 'vscodium'
-user_font_interface: 'Roboto'
-user_font_monospace: 'Iosevka Term SS08'
-user_font_serif: 'Iosevka Slab'
-user_font: 'Iosevka SS08'
+user_config: "{{ user_home }}/.config"
+user_default_editor: "vscodium"
+user_font_interface: "Roboto"
+user_font_monospace: "Iosevka Term SS08"
+user_font_serif: "Iosevka Slab"
+user_font: "Iosevka SS08"
 user_home: '{{ "$HOME" | expandvars }}'
-user_storage_ext: '/media/{{ ansible_user_id }}/12f3d18b-ce5f-4548-bf4e-4b1d1ca46f10'
-user_storage: '{{ user_home }}/storage'
+user_storage_ext: "/media/{{ ansible_user_id }}/12f3d18b-ce5f-4548-bf4e-4b1d1ca46f10"
+user_storage: "{{ user_home }}/storage"
